# brille

./: .gdbinit  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  CMakePresets.json  Doxyfile.in  MANIFEST.in  Manifest.in  Note_complex_vectors.txt  README.md  acme.py  brille.dox  brille.h  brille.html  checkgit.cmake  conanfile.py  fetcher.cmake  gdb_printers.py  index.html  memory_usage.html  motivation.html  plotting.html  py-modindex.html  pyproject.toml  searchindex.js  setup.cfg  setup.py  test.txt  version.cpp  version.hpp.in  version_info.py  write_version_info.cmake  write_version_info.py
+brille/: BZGridQ.m  BZGridQE.m  BZMeshQ.m  BZTrellisQ.m  brillouinzone.m  latmat.m  lattice.m  m2p.m  modesort.m  p2m.m  parse_arguments.m  plot3.m  spinw2bz.m  spinw2bzg.m  spinw2lat.m  test.m
+fibril/: BZGridQ.m  BZGridQE.m  BZMeshQ.m  brillouinzone.m  latmat.m  lattice.m  m2p.m  modesort.m  p2m.m  parse_arguments.m  plot3.m  spinw2bz.m  spinw2bzg.m  spinw2lat.m  test.m
+symbz/: BZGridQ.m  BZGridQE.m  BZMeshQ.m  DataHash.m  brillouinzone.m  latmat.m  lattice.m  m2p.m  modesort.m  p2m.m  parse_arguments.m  plot3.m  spinw2bz.m  spinw2bzg.m  spinw2lat.m  test.m
@SymBZfun/: SymBZfun.m  convolve_modes.m  fill.asv  fill.m  get_mapped.m  horace_sqw.m  interpolate.m  neutron_spinwave_intensity.m
@SymEu/: SymEu.m
@SymSim/: SymSim.m  horace_sqw.m  w_q.m
api/: class_brillouin_zone_grid3.html  class_brillouin_zone_trellis3.html  class_debug_printer.html  class_direct.html  class_interpolate_grid3.html  class_interpolation_data.html  class_l_d_vec.html  class_l_q_vec.html  class_trellis_leaf.html  class_view_hierarchy.html  define_debug_8hpp_1aa6ef311a30404b1b6353981d9dc58428.html  define_debug_8hpp_1ac72ed6ed9aa2135cd2cdf31117063ed9.html  define_lapjv_8hpp_1a080abdcb9c02438f1cd2bb707af25af8.html  define_lapjv_8hpp_1aafe1ad2a3826cac1b7fb1f15d69424b0.html  define_lapjv_8hpp_1ac620672df61cb1f3f6bf8901869b6be2.html  define_pointgroup_8cpp_1aa40c7f9169efb27ddcdb07c7f3f9aa3f.html  dir_src.html  enum_lattice_8hpp_1a70ab36d1d4920fdd314279845af152c5.html  file_src_basis.hpp.html  file_src_bz_grid.hpp.html  file_src_debug.hpp.html  file_src_interpolation_data.hpp.html  file_src_latvec.tpp.html  file_src_lqvec.tpp.html  file_src_nest.hpp.html  file_src_nest.tpp.html  file_src_permutation.hpp.html  file_src_pointsymmetry.hpp.html  file_src_polyhedron.hpp.html  file_src_smp.hpp.html  file_src_spg_database.hpp.html  file_src_symmetry.cpp.html  file_src_trellis.hpp.html  file_src_triangulation.hpp.html  file_src_triangulation_simple.hpp.html  function_balltrellis_8hpp_1a8422f8db814524f649a7ab610a7f4106.html  function_bz_8cpp_1a420a3ad8100b7cc7423656c6dcde433e.html  function_bz_8cpp_1a4b192cdeefa32dc3520cd71e4a577942.html  function_bz_8hpp_1a0899a4cb03ce47e8ae844fb49d2c923c.html  function_bz_8hpp_1a420a3ad8100b7cc7423656c6dcde433e.html  (+94 more)
brille/: __init__.py  bound.py  castep.py  euphonic.py  evn.py  lattice.py  load.py  plotting.py  spglib.py  utils.py  vis.py
cmake/: DynamicVersion.cmake  brille-conan.cmake  brille-doxygen.cmake  brille-hdf5.cmake  brille-openmp.cmake  checkgit.cmake  conan_provider.cmake  fetcher.cmake
devtools/: build_cmake.py  build_pages.py  build_wheel.py  config.py
docs/: Doxyfile  brille.rst  buttons.py  conf.py  doxygen.rst  index.rst  install_guide.rst  libbrille.rst  memory_usage.rst  motivation.rst  requirements.txt  tutorial.rst  tutorial_00.py  tutorial_00.rst  undoc_brille.rst  utils.rst  version.py  visualisation.rst
fibril/: __init__.py  euphonic.py  evn.py  plotting.py
latest/: .buildinfo  README.md  brille.html  genindex.html  install_guide.html  memory_usage.html  motivation.html  objects.inv  plotting.html  py-modindex.html  searchindex.js
lib/: CMakeLists.txt
src/: CMakeLists.txt  README.md  _binding.h  _brille.cpp  _c_to_python.h  _c_to_python.hpp  _fibril.cpp  _grid.h  _grid.hpp  _lattice.h  _lattice.hpp  _mesh.h  _mesh.hpp  _nest.h  _nest.hpp  _polyhedron.h  _polyhedron.hpp  _symbz.cpp  _trellis.h  _trellis.hpp  approx.hpp  approx_config.cpp  approx_config.hpp  approx_float.hpp  arithmetic.cpp  arithmetic.h  array.hpp  array.tpp  array2.hpp  array2.tpp  array_.hpp  array_attributes.hpp  array_functions.hpp  array_l_.hpp  array_l_attributes.hpp  array_l_functions.hpp  array_l_post.hpp  array_l_pre.hpp  array_latvec.hpp  array_latvec.tpp  (+189 more)
src/tests/: CMakeLists.txt  arrayvector_test.cpp  basis_test.cpp  brillouinzone_test.cpp  catch_test.cpp  grid_test.cpp  hallsymbol_test.cpp  interpolation_test.cpp  lattice_dual_test.cpp  lattice_test.cpp  lattice_test_disabled.cpp  latvec_dual_test.cpp  latvec_test.cpp  linalg_test.cpp  math_test.cpp  mesh_test.cpp  mesh_test_disabled.cpp  munkres_test.cpp  nb.castep_bin  nest_test.cpp  nest_test_disabled.cpp  poly_lattice_test.cpp  polyhedron_flex_test.cpp  polyhedron_test.cpp  spglib_dat.cpp  spglib_dat.hpp  spglib_test.cpp  subscript_test.cpp  symmetry_test.cpp  transform_test.cpp  trellis_test.cpp
symbz/: __init__.py  euphonic.py  evn.py  plotting.py  profile.py  simphony.py
test/: test.cpp  test_3_bzgrid.py  test_interpolation.py  test_lattice.py
tests/: CMakeLists.txt  aflow_lattices.json  arrayvector_test.cpp  brillouinzone_test.cpp  catch_test.cpp  grid_test.cpp  hallsymbol_test.cpp  interpolation_test.cpp  lattice_test.cpp  latvec_test.cpp  linalg_test.cpp  mesh_test.cpp  munkres_test.cpp  nb.castep_bin  nest_test.cpp  polyhedron_test.cpp  test.cpp  test_1_lattice.py  test_2_brillouinzone.py  test_3_bzgrid.py  test_4_interpolation.py  test_5_mode_sorting.py  test_6_euphonic.py  test_6_simphony.py  transform_test.cpp  trellis_test.cpp
travis/: build-wheels.sh  fake_cmake.sh
v0.3.0/: .buildinfo  genindex.html  tutorial.html
v0.3.1/: README.md  genindex.html  memory_usage.html  tutorial.html
v0.4.0/: README.md  py-modindex.html  search.html  searchindex.js
v0.4.1/: brille.html  index.html
v0.4.3/: README.md  brille.html  genindex.html  motivation.html  objects.inv  searchindex.js
v0.5.0/: README.md  brille.html  genindex.html  objects.inv  (+2 more)
(+4210 files in other folders)
