[build-system]
# Minimum requirements for the build system to execute.
requires =[
  "setuptools>=64",
  "setuptools_scm>=8",
  "wheel",
  "cmake>=3.24",
  "conan==2.4.1",
]
build-backend = "setuptools.build_meta"

[project]
name = 'brille'
dynamic = ["version"]
authors = [
  {name = "Gregory Tucker"},
  {name = "Duc Le"},
  {name = "Rebecca Fair"}
]
maintainers = [
  {name = "Gregory Tucker", email = "gregory.tucker@ess.eu"},
]
description='Irreducible Brillouin zone symmetry and interpolation.'
readme = "README.md"
requires-python = ">=3.8"
classifiers=[
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
  "Operating System :: Microsoft :: Windows :: Windows 10",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: C++",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
  'numpy',
]

[project.optional-dependencies]
plotting = ['matplotlib>=2.2.0', ]
vis = ['pyglet>=1.5.27', 'vispy>=0.12.1', ]

[project.urls]
Homepage = "https://github.com/brille"
Documentation = "https://brille.github.io"
Respository = "https://github.com/brille/brille.git"
Issues = "https://github.com/brille/brille/issues"

[tool.setuptools.packages.find]
include = ["brille*"]
namespaces = false

[tool.setuptools_scm]

[tool.cibuildwheel]
archs = ["auto64"]
test-command = "python -m unittest discover -s {package}/wrap/tests"
before-test = "pip install numpy"
build-verbosity = 1
skip = ["cp36-*", "cp37-*", "pp*"]  # all skipped for speed, except on Windows where PyPy builds don't work(?)

[tool.cibuildwheel.windows]
before-build = "pip install delvewheel"
repair-wheel-command = "delvewheel repair -w {dest_dir} -v {wheel}"

[[tool.cibuildwheel.overrides]]
select = "*-musllinux*"
before-test = "echo 'Override building numpy since no wheels are provided'"
test-command = "echo 'Override test command under musl libc until we can install a numpy wheel'"
